Fixed spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ section {
   background-color: white;
     padding:30px 0;
   }
-}
+
 
 .main-nav a {
   text-transform: uppercase;
@@ -114,7 +114,7 @@ section {
 }
 
 .contact-info{
-  padding: 30px 10% 0 10%;
+  padding: 30px 0 20px 0;
   margin:0 2em;
   }
 
@@ -140,7 +140,7 @@ footer .main-nav {
 
 /* Media Queries */
 
-@media screen and (min-width:600px) {
+@media screen and (min-width:768px) {
   .main-header {
     flex-direction: column;
     align-items: center;
@@ -239,7 +239,7 @@ footer .main-nav {
 }
 }
 
-@media screen and (min-width:1000px) {
+@media screen and (min-width:1024px) {
   .main-header {
     flex-direction: row;
     justify-content: space-between;
